--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qr-image": "^3.2.0",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.16.4"
+    "whatsapp-web.js": "github:jtourisNS/whatsapp-web.js#RemoteAuth",
+    "wwebjs-mongo": "^1.0.3"
   }
 }
