--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.3",
     "fluent-ffmpeg": "^2.1.2",
     "http": "^0.0.1-security",
+    "mongoose": "^6.3.5",
     "qr-image": "^3.2.0",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
